--- a/web/admin/orders/test.html
+++ b/web/admin/orders/test.html
@@ -146,144 +146,116 @@
         <div class="p-5 flex flex-col gap-5">
           <!-- body strat here -->
 
-          <div
-            class="w-[60%] bg-white rounded-lg shadow dark:bg-primary p-4 md:p-6"
-          >
-            <div class="flex justify-between">
-              <div>
-                <h5
-                  class="leading-none text-3xl font-bold text-gray-900 dark:text-white pb-2"
-                >
-                  32.4k
-                </h5>
-                <p
-                  class="text-base font-normal text-gray-500 dark:text-gray-400"
-                >
-                  Users this week
-                </p>
-              </div>
+          <div class="flex gap-5 items-start">
+            <div
+              class="bg-white py-3 px-3 rounded-lg w-[220px] shadow flex items-center gap-2"
+            >
               <div
-                class="flex items-center px-2.5 py-0.5 text-base font-semibold text-green-500 dark:text-green-500 text-center"
+                class="bg-green-200 w-12 h-12 flex items-center justify-center rounded-full text-green-500"
               >
-                12%
-                <svg
-                  class="w-3 h-3 ms-1"
-                  aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 10 14"
-                >
-                  <path
-                    stroke="currentColor"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M5 13V1m0 0L1 5m4-4 4 4"
-                  />
-                </svg>
+                <i class="fa-solid fa-bag-shopping"></i>
+              </div>
+              <div>
+                <div class="text-lg font-semibold text-gray-500">
+                  Total Orders
+                </div>
+                <div class="text-2xl">100</div>
               </div>
             </div>
-            <div id="area-chart"></div>
             <div
-              class="grid grid-cols-1 items-center border-gray-200 border-t dark:border-gray-700 justify-between"
+              class="bg-white py-3 px-3 rounded-lg w-[220px] shadow flex items-center gap-2"
             >
-              <div class="flex justify-between items-center pt-5">
-                <!-- Button -->
-                <button
-                  id="dropdownDefaultButton"
-                  data-dropdown-toggle="lastDaysdropdown"
-                  data-dropdown-placement="bottom"
-                  class="text-sm font-medium text-gray-500 dark:text-gray-400 hover:text-gray-900 text-center inline-flex items-center dark:hover:text-white"
-                  type="button"
-                >
-                  Last 7 days
-                  <svg
-                    class="w-2.5 m-2.5 ms-1.5"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 10 6"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="m1 1 4 4 4-4"
-                    />
-                  </svg>
-                </button>
-                <!-- Dropdown menu -->
-                <div
-                  id="lastDaysdropdown"
-                  class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
-                >
-                  <ul
-                    class="py-2 text-sm text-gray-700 dark:text-gray-200"
-                    aria-labelledby="dropdownDefaultButton"
-                  >
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-                        >Yesterday</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-                        >Today</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-                        >Last 7 days</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-                        >Last 30 days</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-                        >Last 90 days</a
-                      >
-                    </li>
-                  </ul>
+              <div
+                class="bg-blue-200 w-12 h-12 flex items-center justify-center rounded-full text-blue-500"
+              >
+                <i class="fa-solid fa-tags"></i>
+              </div>
+              <div>
+                <div class="text-lg font-semibold text-gray-500">
+                  Total Products
                 </div>
-                <a
-                  href="#"
-                  class="uppercase text-sm font-semibold inline-flex items-center rounded-lg text-blue-600 hover:text-blue-700 dark:hover:text-blue-500 hover:bg-gray-100 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 px-3 py-2"
-                >
-                  Users Report
-                  <svg
-                    class="w-2.5 h-2.5 ms-1.5 rtl:rotate-180"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 6 10"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="m1 9 4-4-4-4"
-                    />
-                  </svg>
-                </a>
+                <div class="text-2xl">100</div>
+              </div>
+            </div>
+            <div
+              class="bg-white py-3 px-3 rounded-lg w-[220px] shadow flex items-center gap-2"
+            >
+              <div
+                class="bg-violet-200 w-12 h-12 flex items-center justify-center rounded-full text-violet-500"
+              >
+                <i class="fa-solid fa-person"></i>
+              </div>
+              <div>
+                <div class="text-lg font-semibold text-gray-500">
+                  Total Customers
+                </div>
+                <div class="text-2xl">100</div>
               </div>
             </div>
           </div>
-          <button onclick="ff()" type="button">aa</button>
+
+          <div class="flex gap-5">
+            <div
+              class="w-full bg-white rounded-lg shadow p-4 md:p-6"
+            >
+              <div class="flex justify-between mb-5">
+                <div>
+                  <h5
+                    class="leading-none text-3xl font-bold text-gray-900 pb-2"
+                  >
+                    $12,423
+                  </h5>
+                  <p
+                    class="text-base font-normal text-gray-500"
+                  >
+                    Sales this week
+                  </p>
+                </div>
+                <div
+                  class="flex items-center px-2.5 py-0.5 text-base font-semibold text-green-500 text-center"
+                >
+                  23%
+                  <svg
+                    class="w-3 h-3 ms-1"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 10 14"
+                  >
+                    <path
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M5 13V1m0 0L1 5m4-4 4 4"
+                    />
+                  </svg>
+                </div>
+              </div>
+              <div id="grid-chart"></div>
+              
+            </div>
+
+            <div
+              class=" w-[30%] bg-white rounded-lg shadow p-4 flex flex-col justify-between"
+            >
+              <div class="flex justify-between items-start w-full">
+                <div class="flex-col items-center">
+                  <div class="flex items-center mb-1">
+                    <h5
+                      class="text-xl font-bold leading-none text-gray-900 me-1"
+                    >
+                      Website traffic
+                    </h5>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Line Chart -->
+              <div class="" id="pie-chart"></div>
+            </div>
+          </div>
+
           <!-- body end here -->
         </div>
       </div>
@@ -291,21 +263,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script>
-      var data = [
-        6500, 6418, 6456, 6526, 6456, 6456, 8900, 6500, 6418, 6456, 6526, 6456,
-        6456, 8900,
-      ];
-      function ff() {
-        chart.updateSeries([
+      const options = {
+        // set grid lines to improve the readability of the chart, learn more here: https://apexcharts.com/docs/grid/
+        grid: {
+          show: true,
+          strokeDashArray: 4,
+          padding: {
+            left: 2,
+            right: 2,
+            top: -26,
+          },
+        },
+        series: [
           {
-            data: [342, 442, 311, 421, 212],
+            name: "Developer Edition",
+            data: [1500, 1418, 1456, 1526, 1356, 1256],
+            color: "#1A56DB",
           },
           {
-            data: [322, 422, 301, 401, 202],
+            name: "Designer Edition",
+            data: [643, 413, 765, 412, 1423, 1731],
+            color: "#7E3BF2",
           },
-        ]);
-      }
-      var options = {
+        ],
         chart: {
           height: "100%",
           maxWidth: "100%",
@@ -324,6 +304,9 @@
             show: false,
           },
         },
+        legend: {
+          show: true,
+        },
         fill: {
           type: "gradient",
           gradient: {
@@ -339,27 +322,6 @@
         stroke: {
           width: 6,
         },
-        grid: {
-          show: false,
-          strokeDashArray: 4,
-          padding: {
-            left: 2,
-            right: 2,
-            top: 0,
-          },
-        },
-        series: [
-          {
-            name: "Developer Edition",
-            data: [150, 141, 145, 152, 135, 125],
-            color: "#1A56DB",
-          },
-          {
-            name: "Designer Edition",
-            data: [64, 41, 76, 41, 113, 173],
-            color: "#7E3BF2",
-          },
-        ],
         xaxis: {
           categories: [
             "01 February",
@@ -369,13 +331,6 @@
             "05 February",
             "06 February",
             "07 February",
-            "08 February",
-            "09 February",
-            "10 February",
-            "11 February",
-            "12 February",
-            "13 February",
-            "14 February",
           ],
           labels: {
             show: false,
@@ -389,14 +344,93 @@
         },
         yaxis: {
           show: false,
+          labels: {
+            formatter: function (value) {
+              return "$" + value;
+            },
+          },
         },
       };
 
-      const chart = new ApexCharts(
-        document.getElementById("area-chart"),
-        options
-      );
-      chart.render();
+      if (
+        document.getElementById("grid-chart") &&
+        typeof ApexCharts !== "undefined"
+      ) {
+        const chart = new ApexCharts(
+          document.getElementById("grid-chart"),
+          options
+        );
+        chart.render();
+      }
+
+      const getChartOptions = () => {
+        return {
+          series: [52.8, 26.8, 20.4],
+          colors: ["#1C64F2", "#16BDCA", "#9061F9"],
+          chart: {
+            height: "80%",
+            width: "100%",
+            type: "pie",
+          },
+          stroke: {
+            colors: ["white"],
+            lineCap: "",
+          },
+          plotOptions: {
+            pie: {
+              labels: {
+                show: true,
+              },
+              size: "100%",
+              dataLabels: {
+                offset: -25,
+              },
+            },
+          },
+          labels: ["Direct", "Organic search", "Referrals"],
+          dataLabels: {
+            enabled: true,
+            style: {
+              fontFamily: "Inter, sans-serif",
+            },
+          },
+          legend: {
+            position: "bottom",
+            fontFamily: "Inter, sans-serif",
+          },
+          yaxis: {
+            labels: {
+              formatter: function (value) {
+                return value + "%";
+              },
+            },
+          },
+          xaxis: {
+            labels: {
+              formatter: function (value) {
+                return value + "%";
+              },
+            },
+            axisTicks: {
+              show: false,
+            },
+            axisBorder: {
+              show: false,
+            },
+          },
+        };
+      };
+
+      if (
+        document.getElementById("pie-chart") &&
+        typeof ApexCharts !== "undefined"
+      ) {
+        const chart = new ApexCharts(
+          document.getElementById("pie-chart"),
+          getChartOptions()
+        );
+        chart.render();
+      }
     </script>
   </body>
 </html>
