user details page ajax functions

--- a/web/user/test.html
+++ b/web/user/test.html
@@ -181,6 +181,15 @@
                 You currently don't have any saved delivery addresses. Add an
                 address here to be pre-filled for quicker checkout.
               </p>
+              <div class="flex border rounded-lg px-5 py-2 relative">
+                <div>
+                  <div class="text-gray-400">Name</div>
+                  <div>Nipun Avishka</div>
+                </div>
+                <form class="absolute top-[-12px] right-[-10px] text-2xl hover:text-red-600" action="#">
+                    <button type="submit"><i class="fa-solid fa-circle-xmark"></i></button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
